# pintax

./: .envrc  pyproject.toml  tmp.py
docs/: build.sh
docs/source/: api.rst  conf.py  index.rst  unstable.rst
pintax/: __init__.py  _api.py  _core.py  _helpers.py  _oryx_ext.py  _primitives.py  _registry.py  _rules.py  _rules_basic.py  _rules_controlflow.py  _utils.py  functions.py  oryx_ext.py  unstable.py
test/: conftest.py  test_controlflow.py  test_pint_np.py  test_pint_np.txt  test_prims.py  test_quantity.py  test_transforms.py
