[project]
name = "pintax"
version = "0.1.0"
description = ""
authors = [{ name = "Xinyang Chen", email = "chenxinyang99@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "equinox (>=0.11.12,<0.12.0)",
  "jax (>=0.5.3,<0.6.0)",
  "pint (>=0.24.4,<0.25.0)",
]

[project.optional-dependencies]
oryx = ["oryx (>=0.2.9,<0.3.0)"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-subtests = "^0.14.1"

ipython = "^9.0.2"
colorama = "^0.4.6"

black = "^25.1.0"
isort = "^6.0.1"
basedpyright = "^1.28.3"

sphinx = "^8.2.3"
# sphinx-autodoc-typehints = "^3.1.0"
sphinx-rtd-theme = "^3.0.2"
# sphinx-toolbox = "^3.9.0"
# sphinx-book-theme = "^1.1.4"
sphinxcontrib-restbuilder = "^0.3"
# sphinx-design = "^0.6.1"
rstfmt = "^0.0.14"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = ["pintax"]

[tool.pyright]
typeCheckingMode = "standard"
reportPrivateImportUsage = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
